Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.63**

***  Updated list of SystemVerilog keywords to correspond to IEEE 1800-2005.

***  Add /*verilator public_flat*/.  [Eugene Weber]

**** Try all +libext's in the exact order given.  [Michael Shinkarovsky]

**** Fix elimination of public signals assigned to constants.  [Eugene Weber]

**** Fix internal error when public for loop has empty body.  [David Addison]

**** Fix "Loops detected" assertion when model exceeds 4GB.  [David Hewson]

* Verilator 3.633 2/7/2007

***  Add --trace-depth option for minimizing VCD file size. [Emerson Suguimoto]

***  With VL_DEBUG, show wires causing convergence errors. [Mike Shinkarovsky]

**** Fix isolate_assignments when many signals per always. [Mike Shinkarovsky]

**** Fix isolate_assignments across task/func temporaries. [Mike Shinkarovsky]

**** Fix $display's with array select followed by wide AND.  [David Hewson]

* Verilator 3.632 1/17/2007

***  Add /*verilator isolate_assignments*/ attribute.  [Mike Shinkarovsky]

* Verilator 3.631 1/2/2007

**   Support standard NAME[#] for cells created by arraying or generate for.
     This replaces the non-standard name__# syntax used in earlier versions.

**** Fix again dotted references into generate cells.  [David Hewson]
     Verilator no longer accepts duplicated variables inside unique
     generate blocks as this is illegal according to the specification.

**** Fix $readmem* with filenames < 8 characters.  [Emerson Suguimoto]

* Verilator 3.630 12/19/2006

**   Support $readmemb and $readmemh.  [Eugene Weber, Arthur Kahlich]

***  Fixed configure and compiling under Solaris.  [Bob Farrell]

***  When dotted signal lookup fails, help the user by showing known scopes.

***  Reduce depth of priority encoded case statements.  [Eugene Weber]
